samples/_failures_safe/1761660729_59b027_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b97e7565.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_b97e7565.c:172:9: error: expected expression at end of input
  172 |         case
      |         ^~~~
./samples/SAFE/__tmp_b97e7565.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b97e7565.c:172:9: error: expected declaration or statement at end of input
